@@ -211,6 +211,7 @@ Chronological list of authors
   - Xu Hong Chen
   - Domenico Marson
   - Ahmed Salah Ghoneim
+  - Alexander Schlaich
 
 External code
 -------------
